@@ -5,17 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!--
-        This POM is used as parent for any Wakamiti component in order to share the build process
+        This POM is used as a parent for any Wakamiti component in order to share the build process
         and some other global properties (organization, etc.).
 
-        The version number will be always the same regardless the versions of the components.
+        The version number will always be the same regardless of the versions of the components.
     -->
 
     <groupId>es.iti.wakamiti</groupId>
     <artifactId>wakamiti-starter</artifactId>
     <packaging>pom</packaging>
     <!-- This version number refers to the build process defined in this same POM, not the content of the components -->
-    <version>1.0.3</version>
+    <version>1.1.0</version>
 
 
     <name>Wakamiti Starter</name>
@@ -37,7 +37,7 @@
     </scm>
     <developers>
         <developer>
-            <email>luiinge@gmail.com</email>
+            <email>linesta@iti.es</email>
         </developer>
         <developer>
             <email>mgalbis@iti.es</email>
@@ -65,11 +65,10 @@
         <maven.repo.local>${user.home}/.m2/repository</maven.repo.local>
 
         <!-- plugin versions -->
-        <jacoco.version>0.8.2</jacoco.version>
+        <jacoco.version>0.8.11</jacoco.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
         <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
         <surefire.report.version>2.6</surefire.report.version>
-        <maven.site.version>3.7.1</maven.site.version>
         <maven.ant.version>1.8</maven.ant.version>
         <maven.info.reports.version>3.0.0</maven.info.reports.version>
         <maven.jar.plugin.version>3.0.0</maven.jar.plugin.version>
@@ -80,88 +79,166 @@
         <sonar.organization>iti-ict</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
-        <jext.version>1.1.3</jext.version>
+        <jext.version>1.2.0</jext.version>
     </properties>
 
 
     <!-- basic build features -->
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.version}</version>
+                    <configuration>
+                        <release>${maven.compiler.release}</release>
+                        <verbose>${verbose}</verbose>
+                        <compilerArgs>
+                            <arg>-Xlint:all</arg>
+                        </compilerArgs>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${maven.resources.version}</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
+                <!-- dependency convergence enforce -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.3.0</version>
+                    <executions>
+                        <execution>
+                            <id>enforce</id>
+                            <configuration>
+                                <rules>
+                                    <dependencyConvergence>
+                                        <excludedScopes>
+                                            <scope>test</scope>
+                                        </excludedScopes>
+                                    </dependencyConvergence>
+                                    <requireMavenVersion>
+                                        <version>${maven.version}</version>
+                                    </requireMavenVersion>
+                                </rules>
+                            </configuration>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <!-- Surefire with JaCoCo agent -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <configuration>
+                        <argLine>@{surefireJacocoAgent} -XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8</argLine>
+                    </configuration>
+                </plugin>
+                <!-- Surefire with JaCoCo agent -->
+                <plugin>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                            <configuration>
+                                <argLine>@{failsafeJacocoAgent} -XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8</argLine>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <!-- JaCoCo coverage -->
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
+                </plugin>
+                <!-- flatten prior install, required since ${revision} is used -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>flatten-maven-plugin</artifactId>
+                    <version>1.2.7</version>
+                    <executions>
+                        <execution>
+                            <id>flatten</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>flatten</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>flatten-clean</id>
+                            <phase>clean</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <updatePomFile>true</updatePomFile>
+                        <flattenDependencyMode>all</flattenDependencyMode>
+                        <pomElements>
+                            <name>expand</name>
+                            <description>expand</description>
+                            <url>expand</url>
+                            <inceptionYear>expand</inceptionYear>
+                            <organization>expand</organization>
+                            <scm>expand</scm>
+                            <developers>expand</developers>
+                            <properties>keep</properties>
+                            <dependencyManagement>expand</dependencyManagement>
+                            <pluginManagement>expand</pluginManagement>
+                            <dependencies>expand</dependencies>
+                            <build>keep</build>
+                        </pomElements>
+
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
 
             <!-- specific version of maven compiler -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.version}</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                    <verbose>${verbose}</verbose>
-                    <compilerArgs>
-                        <arg>-Xlint:all</arg>
-                    </compilerArgs>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
             </plugin>
             <!-- dependency convergence enforce -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.3.0</version>
-                <executions>
-                    <execution>
-                        <id>enforce</id>
-                        <configuration>
-                            <rules>
-                                <dependencyConvergence>
-                                    <excludedScopes>
-                                        <scope>test</scope>
-                                    </excludedScopes>
-                                </dependencyConvergence>
-                                <requireMavenVersion>
-                                    <version>${maven.version}</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <!-- Surefire with JaCoCo agent -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
-                <configuration>
-                    <argLine>${surefireJacocoAgent}
-                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                        --illegal-access=permit</argLine>
-                </configuration>
             </plugin>
             <!-- Failsafe with JaCoCo agent -->
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                        <configuration>
-                            <argLine>${failsafeJacocoAgent}
-                                -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                                --illegal-access=permit</argLine>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <!-- JaCoCo coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
                 <executions>
                     <execution>
                         <id>pre-unit-test</id>
@@ -227,39 +304,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.2.7</version>
-                <executions>
-                    <execution>
-                        <id>flatten</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>flatten</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>flatten-clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <updatePomFile>true</updatePomFile>
-                    <pomElements>
-                        <name/>
-                        <description/>
-                        <url/>
-                        <inceptionYear/>
-                        <organization/>
-                        <scm/>
-                        <developers/>
-                        <dependencyManagement/>
-                    </pomElements>
-                </configuration>
             </plugin>
-
-
         </plugins>
     </build>
 
@@ -302,7 +347,7 @@
             <id>sonatype</id>
             <build>
                 <plugins>
-                    <!-- This plugin disable the deploy for artifacts that already exists -->
+                    <!-- This plugin disables the deployment for artifacts that already exists -->
                     <plugin>
                         <groupId>org.honton.chas</groupId>
                         <artifactId>exists-maven-plugin</artifactId>
@@ -383,9 +428,6 @@
 
 
 
-
-
-
     <!-- Share versions of some common dependencies -->
 
     <dependencyManagement>
@@ -420,7 +462,7 @@
             <dependency>
                 <groupId>com.jayway.jsonpath</groupId>
                 <artifactId>json-path</artifactId>
-                <version>2.8.0</version>
+                <version>2.9.0</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
@@ -445,7 +487,12 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.12.0</version>
+                <version>3.14.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>1.11.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -465,12 +512,12 @@
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
-                <version>3.21.0</version>
+                <version>3.24.2</version>
             </dependency>
             <dependency>
                 <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
-                <version>3.0.0</version>
+                <version>4.2.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.groovy</groupId>
@@ -498,6 +545,11 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.13.2</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.14.12</version>
             </dependency>
         </dependencies>
 
